update openapi backend with app descriptor
