# backend/go/model_create_deployment_request.go
@@ -1,44 +1,0 @@
-/*
- * ICOS Shell
- *
- * This is the ICOS Shell based on the OpenAPI 3.0 specification.
- *
- * API version: 1.0.11
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package shellbackend
-
-type CreateDeploymentRequest struct {
-
-	Application string `json:"application"`
-
-	Requirements []string `json:"requirements"`
-}
-
-// AssertCreateDeploymentRequestRequired checks if the required fields are not zero-ed
-func AssertCreateDeploymentRequestRequired(obj CreateDeploymentRequest) error {
-	elements := map[string]interface{}{
-		"application": obj.Application,
-		"requirements": obj.Requirements,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertRecurseCreateDeploymentRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of CreateDeploymentRequest (e.g. [][]CreateDeploymentRequest), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseCreateDeploymentRequestRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aCreateDeploymentRequest, ok := obj.(CreateDeploymentRequest)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertCreateDeploymentRequestRequired(aCreateDeploymentRequest)
-	})
-}
